<?xml version="1.0"?>
<package>
  <name>grid_algorithm_pkg</name>
  <version>0.1.0</version>
  <description>The grid_algorithm_pkg package</description>

  <maintainer email="chp@todo.todo">chp</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>msg_pkg</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>msg_pkg</run_depend>


  <export>
  </export>
</package>
