<?xml version="1.0"?>
<package format="2">
  <name>hybrid_a_star_algorithm_pkg</name>
  <version>0.4.0</version>
  <description>NB ROS Message Publisher</description>
  <maintainer email="404@fdsafsd.com">NB</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ex_msg_srv</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>eigen</build_depend>
  <exec_depend>launch</exec_depend> <!-- I dont know why it should be writen -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ex_msg_srv</exec_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>
  <exec_depend>eigen</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
